--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
               "entryPoints": [
                 {
                   "html": "./src/index.html",
-                  "js": "./src/renderer.ts",
+                  "js": "./src/index.ts",
                   "name": "main_window"
                 }
               ]
