--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "spotify-web-api-node": "^5.0.2",
     "vue": "^3.0.0",
+    "vue-gapi": "^2.0.0-beta.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
