--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playlist-sorter",
+  "name": "playlist",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,27 +14,31 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
-    "spotify-web-api-node": "^5.0.2",
+    "spotify-sdk": "^1.0.0-beta2",
     "vue": "^3.0.0",
     "vue-gapi": "^2.0.0-beta.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/node": "^15.6.1",
+    "@types/spotify-web-api-node": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "electron": "^12.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "typescript": "~4.1.5",
     "vue-cli-plugin-electron-builder": "~2.0.0"
   }
 }
