--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "electron-store": "^8.0.0",
+    "spotify-web-api-node": "^5.0.2",
     "vue": "^3.0.0",
+    "vue-gapi": "^2.0.0-beta.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "@sipec/vue3-tags-input": "^3.0.4",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/spotify-web-api-node": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -33,21 +34,17 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "electron": "^12.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "spotify-web-api-node": "^5.0.2",
     "typescript": "~4.1.5",
-    "vue-cli-plugin-electron-builder": "~2.0.0",
-    "vue-gapi": "^2.0.0-beta.1"
+    "vue-cli-plugin-electron-builder": "~2.0.0"
   }
 }
